# gyraudio

./: .gitignore  README.md  pyproject.toml  requirements.txt  voice_analyzer_pipeline.py
__output_audiosep/0004_0000/: model_0059.pt
scripts/: audio_separation_batch.py  audio_separation_infer.py  audio_separation_infer_push.py  audio_separation_interactive.py  audio_separation_interactive_custom.py  audio_separation_train.py  audio_separation_train_remote.py  preprocess_data.py  remote_training_template.ipynb
src/gyraudio/: __init__.py  default_locations.py  properties.py
src/gyraudio/audio_separation/: infer.py  metrics.py  parser.py  properties.py  push_wandb_samples.py  readme.md  train.py
src/gyraudio/audio_separation/architecture/: building_block.py  flat_conv.py  model.py  neutral.py  transformer.py  unet.py  wave_unet.py
src/gyraudio/audio_separation/data/: __init__.py  dataloader.py  dataset.py  mixed.py  remixed.py  remixed_fixed.py  remixed_rnd.py  silence_detector.py  single.py
src/gyraudio/audio_separation/experiment_tracking/: experiments.py  experiments_decorator.py  experiments_definition.py  storage.py
src/gyraudio/audio_separation/visualization/: audio_player.py  interactive_audio.py  interactive_infer.py  pre_load_audio.py  pre_load_batch.py  pre_load_custom_audio.py
src/gyraudio/io/: audio.py  imu.py
studies/: audio_mix_study.ipynb
test/: test_dataloader.py  test_metrics.py  test_models.py  test_silence_detector.py  test_training_loop.py
